@@ -1,4 +1,5 @@
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+import org.gradle.api.tasks.testing.logging.TestLogEvent
 
 plugins {
     id("java")
@@ -23,6 +24,22 @@ subprojects {
 
     dependencies {
         implementation(rootProject.libs.slf4j.api)
+        testImplementation(rootProject.libs.assertj.core)
+        testImplementation(rootProject.libs.junit.jupiter)
+        testImplementation(rootProject.libs.mockito.core)
+        testImplementation(rootProject.libs.mockito.jupiter)
+        testRuntimeOnly(rootProject.libs.logback.classic)
+    }
+
+    tasks.withType<Test> {
+        useJUnitPlatform()
+        testLogging {
+            events(TestLogEvent.PASSED, TestLogEvent.SKIPPED, TestLogEvent.FAILED)
+            showStandardStreams = true
+        }
+        // suppress JDK 21+ warnings regarding dynamic agent loading (used by mockito)
+        // -Xshare:off: disables class data sharing
+        jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
     }
 
     if (name.startsWith("jws-")) {
